Stronger type control - and using descriptor in EjbBundleRuntimeNode
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>